--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,3 @@
-#spring.datasource.url=jdbc:postgresql://localhost/expenses_db
-#spring.datasource.username=postgres
-#spring.datasource.password=123
-#spring.jpa.generate-ddl=true
-
-spring.h2.console.enabled=true
 
 # ===============================
 # DB
@@ -13,11 +7,12 @@ spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+spring.h2.console.enabled=true
 
 # ===============================
 # JPA / HIBERNATE
 # ===============================
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
